objects/ACP_Setting__c.object
<CustomObject>
    <fields>
        <fullName>ACP_Header_Background_Color__c</fullName>
        <description>Ritika 06/19/17 – Created for Account Plan</description>
        <label>Header Background Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Header_Front_Color__c</fullName>
        <description>Ritika 06/19/17 – Created for Account Plan</description>
        <label>Header Front Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Header_Text_Color__c</fullName>
        <description>Ritika 06/19/17 – Created for Account Plan</description>
        <label>Header Text Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ritika 06/19/17 – Created for Account Plan</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Type__c</fullName>
        <label>Account Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sold-to Account</fullName>
                </value>
                <value>
                    <fullName>GAM Account</fullName>
                </value>
                <value>
                    <fullName>KAM Account</fullName>
                </value>
                <value>
                    <fullName>WW Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AD&amp;M</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
                <value>
                    <fullName>DND</fullName>
                    <isActive>false</isActive>
                    <label>DND</label>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_BU__c</fullName>
        <label>Sub Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ACP Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Account_Plan_Type__c</columns>
        <columns>ACP_Is_Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ACP_Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACP Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>